

  17 Sep 2013; Justin Lecher <jlec@gentoo.org> lh-sources-3.10.9.ebuild:
  Bump to latest aufs3, linux and genpatches release

  21 Aug 2013; Justin Lecher <jlec@gentoo.org> lh-sources-3.10.9.ebuild,
  -files/0001-block-Switch-from-BFQ-v6r2-for-3.10.0-to-BFQ-v6r2-fo.patch:
  Uses latest genpatches

  21 Aug 2013; Justin Lecher <jlec@gentoo.org> lh-sources-3.10.9.ebuild:
  Use epatch

*lh-sources-3.10.9 (21 Aug 2013)

  21 Aug 2013; Justin Lecher <jlec@gentoo.org> +lh-sources-3.10.9.ebuild,
  +files/0001-block-Switch-from-BFQ-v6r2-for-3.10.0-to-BFQ-v6r2-fo.patch:
  Bump to latest auf and linux release

*lh-sources-3.10.7 (16 Aug 2013)

  16 Aug 2013; Justin Lecher <jlec@gentoo.org> +lh-sources-3.10.7.ebuild:
  Bump to latest genpatches/Linux releases

*lh-sources-3.10.6 (15 Aug 2013)

  15 Aug 2013; Justin Lecher <jlec@gentoo.org> +lh-sources-3.10.6.ebuild:
  Bump to latest aufs3 release and Linux releases

  09 Aug 2013; Justin Lecher <jlec@gentoo.org> +lh-sources-3.9.11.ebuild:
  Readd linux-3.9

  07 Aug 2013; Justin Lecher <jlec@gentoo.org> -lh-sources-3.9.10.ebuild,
  -lh-sources-3.9.11.ebuild, -lh-sources-3.10.1.ebuild,
  -lh-sources-3.10.2.ebuild, +lh-sources-3.10.5.ebuild:
  Bump to latest genpatches and aufs release; drop old

*lh-sources-3.10.2 (22 Jul 2013)

  22 Jul 2013; Justin Lecher <jlec@gentoo.org> lh-sources-3.9.11.ebuild,
  +lh-sources-3.10.2.ebuild:
  Version BUmp; Bump to working genpatches for 3.9.11; drop old

*lh-sources-3.9.11 (22 Jul 2013)

  22 Jul 2013; Justin Lecher <jlec@gentoo.org> +lh-sources-3.9.11.ebuild:
  Bump to aufs release and genpatches

  14 Jul 2013; Justin Lecher <jlec@gentoo.org> -lh-sources-3.9.5.ebuild,
  -lh-sources-3.9.6.ebuild, -lh-sources-3.9.6-r1.ebuild,
  -lh-sources-3.9.7.ebuild, -lh-sources-3.9.8.ebuild, -lh-sources-3.9.9.ebuild,
  +lh-sources-3.9.10.ebuild, -lh-sources-3.10.0-r1.ebuild,
  -lh-sources-3.10.0-r2.ebuild, +lh-sources-3.10.1.ebuild:
  Bump to latest genpatches

*lh-sources-3.10.0-r2 (08 Jul 2013)
