@@ -1,5 +1,6 @@
 DIST aufs-sources-3.10_p20130807.tar.xz 146180 SHA256 c36e0ad9e031bdd91a0b496c37b462168f27f94128e3c589ff310e976d72fa1a SHA512 c2afc0e352696301bbc00adbc2b9d869ace35bb920332758d2215515cd35bbbcde78be77d9908e4a0032c3eed8f86f5bc45c3e3e9b5076796e020e641bc71ec9 WHIRLPOOL a233cff073825b90ee68390f007000c1ea8a37584889c4e794829de4f3aaf640c4bf3cdd0413488d2c895722c902caf6e3662b98e93546de0a587e8492641c88
 DIST aufs-sources-3.10_p20130812.tar.xz 146228 SHA256 6b7e2e6db61a53916a48988608fa5a61cf43e9c92bf0ff830d27ad7c00abe44b SHA512 9cb91ee756e56d19fa8355fa9cb4ddd7c26ad00abdef9f46f2b81b685d9c0d7f3426f26a78c3fca42c084de6aee39e69afeb18db711347e3437029d60820f96b WHIRLPOOL d8cf46d08e654701faafc113cf1e38e239175898c907f55e53f635afc734c0d6200f1888fc28cd21bce0bfdc319760943e6c97a49953480e8824a584795873ae
+DIST aufs-sources-3.10_p20130821.tar.xz 148668 SHA256 26476de244edb7c5bf3c7ce4d52b2b0ffc2c5c4ea0216dfeb46fd648c26d4252 SHA512 6cef6e153e82f49bbb0331cdcbb9e7217bbb39de64c871470837880451d1efc4c5cc75480d8b32c48be8cd354e55829df45ce52d40cfd80af0784f6c746e0e17 WHIRLPOOL dc65ff6243c31034c8444ba6c988f969a6915b1d325c51b9840740c65637dcf31f5d4e8b6445e46a032d101f50adf62aa34a04c0e65fcd1c4021a693a26fdcc5
 DIST aufs-sources-3.10_p20130915.tar.xz 150280 SHA256 55f431a907604330f1563bc49a0258a0832f15cd06703a3a333a003e57f7cbce SHA512 6f97db68f57eff85d412d6bab112f96a83e773250ad43fd704ecd1a5ee5a7ab65812674bb9c2a36de2928e8c6189eb4c81f7c558b6352ebeda2695aa34cf92f3 WHIRLPOOL 9f80bf00e386edbd64d6d67865a6bd9ef257a90c64e907ddee3401e3fe72661f6521d76bd4746e4d78eede54fcf8340b92dc15a4fbc49c659f75e71d824d010b
 DIST aufs-sources-3.9_p20130807.tar.xz 145828 SHA256 04e953da68e8860fdd653b1f34a26f76ebbf211e9696fedcb17836f2583e98f3 SHA512 06f96f07a81ea6bcddeeba17f8ebdb9851fd9bd37588baafa575be174edec99c5dbdfcc7caa29be3c9db417d6b1bd37c2beaca4e31a6105d81c16d2d667a4be1 WHIRLPOOL b1ac78d0fb67b4c6b7ee2ce989f60840d220feb45e439b915c8b8ed1827995a8a97fdf52b5cb696d121d9dc5735b0f35bcd5780dbfe7a8cd69021280f750174f
 DIST deblob-3.10 117299 SHA256 d48cad04fab6a802b3a3e34955c8e35b539c2441f9a62522ec5a132c3a5ae684 SHA512 7b30f0f97ed97bf6b096d4a321b4b1e62f4b48f07972f2511870c3eaaf4f3877b0c6af2f30f6b985edf9c9c79267d40448b504c59016acfe06374630d1fdcba9 WHIRLPOOL 03a5963367cc6cb4f87e3d315ab61a8b3cb1fe577b20d7e2fb6ad83464075b3ed8176f543bb4c3b4e607d78cd55ef940f446bb75be09eb7496321930413ce2b9
@@ -12,6 +13,8 @@ DIST genpatches-3.10-11.base.tar.xz 202548 SHA256 e61abdad0f324a6b59cfb774249b44
 DIST genpatches-3.10-11.extras.tar.xz 16564 SHA256 2b6f06a71c89c5866615b1a32324f48e26f7e89b2e7473342a1f3451f1e39500 SHA512 1ef0aad40335438cc10163ffd2e7b7730274fff9bc9ce265be6e194fddf8edf7f527d1cbe3c411d6ba79f4fb63f2ee8d54af37fcdf9eb19f5717b6d54ecfce16 WHIRLPOOL 3bb7054fdfcc887fd306a60deda667acdba0b64e0b5c719f807b50b05c67451fae20e6e22fbde59fbd2fff2ab32b21cb91fa58ae05b7a37e9c8b23c28d5cc66a
 DIST genpatches-3.10-13.base.tar.xz 220108 SHA256 cc2c91b479e7dd78e5a793e220b4f4d067d8bb2cd89e84c35f82612eba2a62c2 SHA512 01a1b73bcf6ee1add8a307dd23e39cd0f8ef4798c6ccea42e676ac2dc8f8c2cb3e0c3802d80b5800c9c607f318aa63feaef90ae95375d29e664ce8d9c02ea671 WHIRLPOOL c938d8aa11eb2e701c6bff69301253e896c6c65f5f6c5da3cd1737e376fb2ef50aac5b80e1d0e4110298e17ab4c06db3e395e1e882b189a141412e41d83f3f01
 DIST genpatches-3.10-13.extras.tar.xz 17732 SHA256 aaec50b87931d58b16a0ca1a920e59baee9256fc2465a5ee9a3b9e7dde6d1a81 SHA512 9e30d1ff47600c85d655ffb6f4caefec5140550b517b6c97a5c668e93bc8c0dbd13dc12952f64c8070d3636860bcd41b7d9b428815a5cfed37a1228c646f3785 WHIRLPOOL dd80d37ca76da035dfdc457cd40f5bfb2b8398d604bec8ed0be27619a33ef68af5a02c93d604b6c7b322aab5aec9d9b11b0b2c628c959c562220082b18c65b72
+DIST genpatches-3.10-16.base.tar.xz 233328 SHA256 9ef122dc752894076bd986140a036b6ed295a02952e34db4766946de855ed37c SHA512 42fcd78e0a61a152a65fa6dc878f58ec47867a8556302b1efee82506f79c23970e1def91b75b9f1082cd9d1ad3d0d9c5758c981d01076c76f060d47fb08eacab WHIRLPOOL 43628172a1d682af30cf56dd76c5ec3abffd7ed945f6c2c9cf37de67e70ac1d22a9efc31a387bb569b93c24d45246d919edcc16bebbe4e0eaafa948959597dc0
+DIST genpatches-3.10-16.extras.tar.xz 17732 SHA256 aaec50b87931d58b16a0ca1a920e59baee9256fc2465a5ee9a3b9e7dde6d1a81 SHA512 9e30d1ff47600c85d655ffb6f4caefec5140550b517b6c97a5c668e93bc8c0dbd13dc12952f64c8070d3636860bcd41b7d9b428815a5cfed37a1228c646f3785 WHIRLPOOL dd80d37ca76da035dfdc457cd40f5bfb2b8398d604bec8ed0be27619a33ef68af5a02c93d604b6c7b322aab5aec9d9b11b0b2c628c959c562220082b18c65b72
 DIST genpatches-3.10-19.base.tar.xz 229396 SHA256 d89a5eefd37a777c310698921723130b00ac0149804aa6653cbc90eef6d97179 SHA512 0c6615c2279d1e7e9bc8ecaaed3336b672cb66bb738c9b017700ea06d9d37e5f735ff0355d0394498a51647bc1516e8da97be953a5250aded32c31e96b9a314c WHIRLPOOL 983bcee3c1d2fa35de39828adcb929c846a2c472a2d03ef27f3cffd8c5481ae81437f21b05268781d4d2045d78f2ada5c3e55b21f0beb3bbe997e0db8b869bfb
 DIST genpatches-3.10-19.extras.tar.xz 17752 SHA256 0cee08fb7ebb857d78741b833190d3829e974231de177918f89cbf32e194252b SHA512 0fab063d4d69f3ad824cf573f4da839d635f1f473af928c85544df60bb62e9cd29ca67f95110689299e79bc9f5b35455436c53fbc732569170b5decf17f74e97 WHIRLPOOL 9a73aa0e84690820832791b63749e01f4d622cf1f0327ae33a6188b866ba1459f6f6b3a01d31412fa3cc226da8af6ab63ee59db29cdfb787cd24901c85b84233
 DIST genpatches-3.9-17.base.tar.xz 290752 SHA256 66f3fc418d7faee9809d35df9e4c17da8d84286c8b48e0e5149fa626af2c7a2d SHA512 5a849ad1b2259a5ba45698942ef224231b664cff7bcc6a02b2fe94e317a961ceb1198b6a9c0550bafdc53671fd4db5d323c3f0efb24d3956e8297e32f9369d25 WHIRLPOOL 1cd46b907bc07d130199085c58b5793681577921542b099241aa937cd95dff0f18c91ea8a6eda52e3d1ae2928709678947de4d1f5266aeafe6406a785ec1d75b
